k8s/manifests/user/network-system/static-routes/brewpiless/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: brewpiless
  namespace: network-system
spec:
  type: ExternalName

  ports:
    - name: http
      port: 80

  externalName: 10.8.10.212
