k8s/manifests/user/network-system/static-routes/brewpiless/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brewpiless
  namespace: network-system
  annotations:
    cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    hajimari.io/enable: "true"
    hajimari.io/icon: "glass-mug-variant"
    hajimari.io/appName: "brewpi"

spec:
  ingressClassName: "nginx"
  tls:
    - secretName: tls.brewpi
      hosts:
        - "brewpi.${EXTERNAL_DOMAIN}"

  rules:
    - host: brewpi.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brewpiless
                port:
                  number: 80
